replacing Stream .toList() with Collectors.toList()